--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -372,3 +372,16 @@ a:hover {
 .value-card > div:last-child {
   transition: all 0.5s cubic-bezier(0.5, 0, 0, 1);
 }
+
+@media (max-width: 767px) {
+  .first-section {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .hero {
+    margin-top: 0;
+    border-radius: 0;
+  }
+  .hero-content {
+    border-radius: 0;
+  }
+}
